# BasePythonPlaywright

./: .bandit  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_STRUCTURE.md  Dockerfile  INSTALLATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PENJELASAN_LENGKAP.md  QUICK_GUIDE.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_COMPLETE.md  USAGE_GUIDE.md  docker-compose.yml  pyproject.toml  pytest.ini  quick-start.sh  requirements.txt  run_tests.py  setup.py
.github/workflows/: tests.yml
config/: settings.py
core/: __init__.py  base.py  config.py  runner.py  utils.py
decorators/: __init__.py
pages/: __init__.py
src/: __init__.py  base.py  locators.py  utils.py
tests/: __init__.py  conftest.py  test_example.py  test_examples.py
